# gramps-web-mcp-rs

./: .dockerignore  .env.example  .mcp.json  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.dev.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: coverage.yml  docker.yml  lint.yml
docs/: setup-local.md  setup-server-lan.md  setup-server-public.md  setup-server.md
src/: app_error.rs  auth.rs  client.rs  config.rs  lib.rs  main.rs  models.rs  server.rs  tools.rs
src/models/: citation.rs  event.rs  family.rs  note.rs  person.rs  place.rs  repository.rs  source.rs  tag.rs
src/resources/: gql_reference.md  oql_reference.md
src/server/: params.rs
src/tools/: create.rs  delete.rs  get.rs  merge.rs  search.rs  transaction.rs  update.rs
tests/: integration_tests.rs
tests/common/: mod.rs
