[package]
name = "gramps-web-mcp-rs"
version = "1.0.1"
edition = "2021"
description = "MCP server for Gramps Web genealogy API"
license = "Apache-2.0"

[lib]
name = "gramps_web_mcp_rs"
path = "src/lib.rs"

[[bin]]
name = "gramps-web-mcp-rs"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
envy = "0.4"
reqwest = { version = "0.13", features = [
    "json",
    "multipart",
    "brotli",
    "gzip",
    "zstd",
    "rustls",
    "rustls-native-certs",
], default-features = false }
rmcp = { version = "1.7", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
] }
axum = { version = "0.8", features = ["tokio"] }
tower-http = { version = "0.7", features = ["cors"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.28", features = ["derive"] }
urlencoding = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tokio-test = "0.4"
testcontainers = { version = "0.27", features = ["http_wait"] }
serial_test = "3"
